.archived/kubernetes/rook-ceph.old/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app_name rook-ceph-rgw-ceph-objectstore
spec:
  hostnames:
    - s3.noirprime.com
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: http
  rules:
    - backendRefs:
        - name: *app_name
          port: 80
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
spec:
  hostnames:
    - rook.noirprime.com
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: http
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
